# CMakeTemplate

./: .travis.yml  CMakeLists.txt  main.cpp
